--- a/teto-blog/resources/css/style.css
+++ b/teto-blog/resources/css/style.css
@@ -1,4 +1,89 @@
+@font-face {
+    font-family:'cursiva';
+    src: url('/src/font/Sunday Gallery.otf') format('opentype');
+}
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400&display=swap');
+
 body {
     background: rgb(232,236,239);
-background: linear-gradient(83deg, rgba(232,236,239,1) 0%, rgba(214,222,225,1) 100%);
+    background: linear-gradient(83deg, rgba(232,236,239,1) 0%, rgba(214,222,225,1) 100%);
+    padding-top: 15px;
+    padding-left: 35px;
+    margin: 0 auto;
+    color: black;
+    font-family: 'Montserrat', sans-serif;
+
+}
+
+header ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+
+}
+
+li {
+    padding-right: 50px;
+}
+li:hover {
+    transform: scale(1.2);
+    transition: 0.5s all;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+
+.icones {
+    width: 17px;
+    height: 17px;
+    padding-top: 1px;
+}
+
+main {
+    display: flex;
+    flex-direction: row;
+}
+
+h1 {
+    font-family: 'cursiva', Helvetica, sans-serif;
+    font-size: 90px;
+    margin-bottom: 0px;
+}
+p {
+    font-size: 17.3px;
+    letter-spacing: 0.5px;
+    line-height: 30px;
+}
+img {
+    width: 900px;
+    height: 556px;
+
+}
+
+form {
+    display: flex;
+    flex-direction: column;
+}
+
+input{
+    margin: 5px;
+}
+#name {
+    width: 330px;
+    height: 40px;
+    border-radius: 20px;
+    border: 1px solid black;
+    background-color: rgb(232,236,239);
+}
+
+#name:focus{
+    border: 0.5px solid black;
+    transform: scale(1.1);
+    transition: 0.5s;
 }
