--- a/teto-blog/resources/css/style.css
+++ b/teto-blog/resources/css/style.css
@@ -27,6 +27,7 @@ header ul {
 
 li {
     padding-right: 50px;
+    font-size: 17px;
 }
 li:hover {
     transform: scale(1.2);
@@ -36,6 +37,7 @@ li:hover {
 a {
     text-decoration: none;
     color: black;
+
 }
 
 
