mudança na estrutura de pastas

--- a/teto-blog/resources/css/style.css
+++ b/teto-blog/resources/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family:'cursiva';
-    src: url('/home/src/home/font/Sunday Gallery.otf') format('opentype');
+    src: url('/src/home/font/Sunday Gallery.otf') format('opentype');
 }
 
 
