--- a/src/resources/css/music.css
+++ b/src/resources/css/music.css
@@ -35,21 +35,6 @@ body {
     transition: 0.5s;
 }
 
-button {
-    padding: 0.5rem 1rem;
-    text-transform: uppercase;
-    border-radius: 32px;
-    border: 0;
-    cursor: pointer;
-    font-size: 80%;
-    margin-top: 15px;
-    
-}
-
-a {
-    color: white;
-    text-decoration: none;
-}
 
 .icon {
     width: 150px;
@@ -62,25 +47,10 @@ img {
 }
 
 .icones {
-    height: 20px;
-    width: 20px;
+    height: 35px;
+    width: 35px;
 }
 
-#spotify {
-    background-color: #1ed760;
-}
-#spotify:hover {
-    transform: scale(1.05);
-    transition: 0.5s;
-}
-
-#youtube {
-    background-color: #f9051b;
-}
-#youtube:hover {
-    transform: scale(1.05);
-    transition: 0.5s;
-}
 
 h3 {
     margin-bottom: 0px;
@@ -88,4 +58,36 @@ h3 {
 
 span {
     margin-bottom: 10px;
+}
+
+.box {
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    margin: 0.6rem;
+    position: relative;
+    
+    cursor: pointer;
+    transition: all 0.5s ease;
+    color: white;
+}
+
+.box:hover {
+    width: 100px;
+    background-color: #1ed760;
+    color: black;
+    border-radius: 20px;
+}
+span:hover {
+    margin-right: 10px;
+}
+navbar p {
+    transform: translate(60px);
+}  
+
+.icon-s {
+    position: absolute;
+    width: 50px;
 }
