--- a/src/resources/css/music.css
+++ b/src/resources/css/music.css
@@ -5,7 +5,6 @@ body {
     font-family: "Poppins", sans-serif;
     height: 100vh;
     width: 100%;
-        
     display: flex;
     justify-content: center;
     align-items: center;
@@ -15,6 +14,7 @@ body {
     color: #434343;
 }
  
+/*cards*/
 
 .cards { 
     display: flex;
@@ -26,7 +26,7 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
-    margin-right: 30px;
+    margin-right: 35px;
     background-color: white;
     padding: 20px;
     border-radius: 10px;
@@ -69,7 +69,7 @@ span {
     margin-bottom: 10px;
 }
 
-#botao  {
+.box a  {
     width: 45px;
     height: 38px;
     display: flex;
@@ -84,7 +84,7 @@ span {
     text-decoration: none;
 }
 
-#botao:hover {
+.box a:hover {
     width: 110px;
     border-radius: 20px;
 }
@@ -114,5 +114,57 @@ span {
     border-radius: 50%;
     margin-left: 5px;
     transition: all .4s ease;
+}
+
+selection:nth-child(3), selection:nth-child(4){
+    width: 200px;
+    
+}
+
+/*HEADER*/
+header ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    list-style: none;
+
+}
+
+li {
+    padding-right: 50px;
+    font-size: 17px;
+}
+li:hover {
+    transform: scale(1.2);
+    transition: 0.5s all;
+}
+
+header a {
+    text-decoration: none;
+    color: black;
+
+}
+
+
+.iconess {
+    width: 17px;
+    height: 17px;
+    padding-top: 1px;
+}
+
+a li span {
+    text-decoration: underline;
+}
+
+header {
+    height: 80px;
+}
+
+/*titulo*/
+
+h1 {
+    height: 20px;
+    padding-bottom: 45px;
 }
 
