--- a/src/resources/css/fotos.css
+++ b/src/resources/css/fotos.css
@@ -77,10 +77,12 @@ header {
     height: 100%;
     width: 100%;
     object-fit:cover;
+    filter: grayscale(100%);
 }
 img:hover {
     transform: scale(1.1);
     transition: 0.5s;
+    filter: grayscale(0%);
 }
 
 h1 {
