--- a/src/resources/css/show.css
+++ b/src/resources/css/show.css
@@ -50,6 +50,10 @@ header {
     height: 80px;
 }
 
+.titulo {
+    margin-bottom: 40px;
+}
+
 /*cards*/
 .card {
     display: flex;
@@ -69,26 +73,7 @@ header {
     border-radius: 10px;
 }
 .main:hover {
-    width: 340px;
-    height: 105px;
-    transition: 0.5s;
-}
-
-.main:nth-child(2):hover {
-        width: 350px;
-        height: 119px;
-        transition: 0.5s;
-}
-
-
-.main:nth-child(3):hover {
-    width: 340px;
-    height: 119px;
-    transition: 0.5s;
-}
-
-.main:nth-child(4):hover {
-    width: 340px;
+    width: 350px;
     height: 119px;
     transition: 0.5s;
 }
@@ -134,4 +119,6 @@ span {
     margin-bottom: 3px;
     margin-top: 3px;
 }
+
+
 
