mudanca no link entre as pastas feito

--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family:'cursiva';
-    src: url('/src/resources/fonts/home/Sunday\ Gallery.otf') format('opentype');
+    src: url('../fonts/home/Sunday\ Gallery.otf') format('opentype');
 }
 
 
